<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:id="@+id/tvTipsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips_dan_panduan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tvTipsContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isi_tips"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutup" />

    <Button
        android:id="@+id/btnTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isi_tips"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

</LinearLayout>
